--- a/style.css
+++ b/style.css
@@ -28,7 +28,21 @@ body {
 .directions {
     display: flex;
     justify-content: center;
-    padding-bottom: 5vh;
+    padding-bottom: 2vh;
+}
+
+.seasons {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2vh;
+}
+
+.seasons div {
+    padding: 5px;
+    background-color: #000000;
+    color: white;
+    border: 1px solid white;
+    cursor: pointer;
 }
 
 .statDisplay {
@@ -89,6 +103,7 @@ body {
     border-radius: 20px;
     border: 2px solid black;
     cursor: pointer;
+    background-color: #3f3f3f;
 }
 
 .footer {
@@ -98,152 +113,3 @@ body {
     height: 50px;
     background-color: #3f3f3f;
 }
-
-/* Team colors */
-
-/* AFC East */
-
-.dolphins {
-    background: linear-gradient(to bottom right, #008E97, #3f3f3f 40%);
-}
-
-.bills {
-    background: linear-gradient(to bottom right, #00338D, #3f3f3f 40%);
-    
-}
-
-.patriots {
-    background: linear-gradient(to bottom right, #002244, #3f3f3f 40%);
-}
-
-.jets {
-    background: linear-gradient(to bottom right, #125740, #3f3f3f 40%);
-}
-
-/* AFC North */
-
-.ravens {
-    background: linear-gradient(to bottom right, #241773, #3f3f3f 40%);
-}
-
-.bengals {
-    background: linear-gradient(to bottom right, #FB4F14, #3f3f3f 40%);
-}
-
-.browns {
-    background: linear-gradient(to bottom right, #FB4F14, #3f3f3f 40%);
-}
-
-.steelers {
-    background: linear-gradient(to bottom right, #FFB612, #3f3f3f 40%);
-}
-
-/* AFC South */
-
-.texans {
-    background: linear-gradient(to bottom right, #03202F, #3f3f3f 40%);
-}
-
-.colts {
-    background: linear-gradient(to bottom right, #002C5F, #3f3f3f 40%);
-}
-
-.jaguars {
-    background: linear-gradient(to bottom right, #006778, #3f3f3f 40%);
-}
-
-.titans {
-    background: linear-gradient(to bottom right, #0C2340, #3f3f3f 40%);
-}
-
-/* AFC West */
-
-.broncos {
-    background: linear-gradient(to bottom right, #FB4F14, #3f3f3f 40%);
-}
-
-.chiefs {
-    background: linear-gradient(to bottom right, #E31837, #3f3f3f 40%);
-}
-
-.raiders {
-    background: linear-gradient(to bottom right, #000000, #3f3f3f 40%);
-}
-
-.chargers {
-    background: linear-gradient(to bottom right, #0072CE, #3f3f3f 40%);
-}
-
-/* NFC East */
-
-.cowboys {
-    background: linear-gradient(to bottom right, #002244, #3f3f3f 40%);
-}
-
-.giants {
-    background: linear-gradient(to bottom right, #0B2265, #3f3f3f 40%);
-}
-
-.commanders {
-    background: linear-gradient(to bottom right, #773141, #3f3f3f 40%);
-}
-
-.eagles {
-    background: linear-gradient(to bottom right, #004C54, #3f3f3f 40%);
-}
-
-/* NFC North */ 
-
-.bears {
-    background: linear-gradient(to bottom right, #0B162A, #3f3f3f 40%);
-}
-
-.lions {
-    background: linear-gradient(to bottom right, #0076B6, #3f3f3f 40%);
-}
-
-.packers {
-    background: linear-gradient(to bottom right, #203731, #3f3f3f 40%);
-}
-
-.vikings {
-    background: linear-gradient(to bottom right, #4F2683, #3f3f3f 40%);
-}
-
-/* NFC South */ 
-
-.falcons {
-    background: linear-gradient(to bottom right, #A71930, #3f3f3f 40%);
-}
-
-.panthers {
-    background: linear-gradient(to bottom right, #0085CA, #3f3f3f 40%);
-}
-
-.saints {
-    background: linear-gradient(to bottom right, #D3BC8D, #3f3f3f 40%);
-}
-
-.buccaneers {
-    background: linear-gradient(to bottom right, #D50A0A, #3f3f3f 40%);
-}
-
-/* NFC West */
-
-.cardinals {
-    background: linear-gradient(to bottom right, #97233F, #3f3f3f 40%);
-}
-
-.rams {
-    background: linear-gradient(to bottom right, #002244, #3f3f3f 40%);
-}
-
-.ers {
-    background: linear-gradient(to bottom right, #AA0000, #3f3f3f 40%);
-}
-
-.seahawks {
-    background: linear-gradient(to bottom right, #002244, #3f3f3f 40%);
-}
-
-/* end of teams */
